--- a/ProjetInte/pyproject.toml
+++ b/ProjetInte/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "adv-lib",
-    "cellpose>=4.0.4",
+    "cellpose==3.1.1.2",
+    "foolbox>=3.3.4",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
     "numba>=0.61.2",
